package simulacion.entorno;

public class Estadisticas {
}
